[package]
name = "djed_rsx_shared"
version = "0.1.0"
authors = ["Djedou <djedouarnaud.aman@gmail.com>"]

[lib]
name = "djed_rsx_shared"

[features]
default = ["impl-blanket", "impl-dummy", "impl-external-image", "impl-external-yoga"]
impl-blanket = []
impl-dummy = []
impl-external-image = ["image"]
impl-external-yoga = ["djed_yoga"]

[dependencies]
enum-primitive-derive = "0.2.1"
image = { version = "0.18.0", optional = true }
num-traits = "0.2.14"
djed_self_tokenize_macro = { git = "https://github.com/djedou/djed_self_tokenize.git"}
djed_self_tokenize_trait = { git = "https://github.com/djedou/djed_self_tokenize.git"}
serde = "1.0.117"
serde_derive = "1.0.117"
djed_yoga = { git = "https://github.com/djedou/djed_yoga.git", optional = true, version = "0.1.0" }
